# nim-brokers

./: .gitignore  .nph.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  FFI_WRAPPER_ISSUES.md  README.md  USAGEGUIDE.md  brokers.nim  brokers.nimble
brokers/: api_library.nim  broker_context.nim  broker_implement.nim  broker_interface.nim  event_broker.nim  multi_request_broker.nim  request_broker.nim  signal_broker.nim
doc/: ASSOC_CONTAINERS_IMPL_PLAN.md  BROKER_METHOD_TUNNELING_PLAN.md  BROKER_METHOD_TUNNELING_PROMPT.md  BrokerDesignPrezi-TownHall.html  BrokerDesignPrezi.html  BrokerTutorialPrezi.html  Broker_FFI_API.md  CBOR_Refactoring_Round2.md  CBOR_Round2_PartD_EventCourier.md  CLAUDE_brokers_addon.md  CLAUDE_brokers_skill.md  COOKBOOK.md  DROP_ASYNC_EMIT_SYNC_PLAN.md  Event_Dispatch_Options.md  FFI_API.md  FFI_API_Refactor_Plan.md  FLEXIBLE_MT_DISPATCH_PLAN.md  HIERARCHICAL_BROKERS_DEFERRED.md  HIERARCHICAL_BROKERS_PLAN.md  LIMITATION.md  MT_BROKER_CONFIG.md  MT_BROKER_REFACTOR_RETROSPECTIVE.md  MultiThread_EventBroker.md  MultiThread_RequestBroker.md  OOP_Brokers.md  PLAN_global_subscount_teardown_fix.md  TYPESUPPORT.md  TYPE_SURFACE.md  bench_baseline.md  cpp_async_with_std_future.md  mt_event_broker_expanded.nim  mt_request_broker_expanded.nim  mylib_expanded.nim  mylib_expanded.readable_nim
examples/ffiapi/: CMakeLists.txt
examples/ffiapi/cpp_example/: main.cpp
examples/ffiapi/cppapp/: CMakeLists.txt  main.cpp
examples/ffiapi/example/: main.c
examples/ffiapi/go_example/: go.mod  go_example  main.go  main_cbor.go  main_native.go
examples/ffiapi/hierlib/: CMakeLists.txt
examples/ffiapi/hierlib/cpp_example/: main.cpp
examples/ffiapi/hierlib/go_example/: .gitignore  go.mod  main.go
examples/ffiapi/hierlib/nimlib/: hierlib.nim
examples/ffiapi/hierlib/python_example/: main.py
examples/ffiapi/hierlib/rust_example/: Cargo.toml  build.rs
examples/ffiapi/hierlib/rust_example/src/: main.rs
examples/ffiapi/nimlib/: mylib.nim  mylib.nimble
examples/ffiapi/python_example/: main.py  test_both.py  test_combo.py  test_crash.py  test_debug_wrapper.py  test_decode.py  test_events.py  test_isolate.py  test_minimal.py  test_narrow.py  test_order.py  test_replicate.py  test_stress.py  test_wrapper.py
examples/ffiapi/rust_example/: Cargo.toml  build.rs
examples/ffiapi/rust_example/src/: main.rs
examples/ffiapi_cbor/cpp_example/: CMakeLists.txt
examples/ffiapi_cbor/cpp_example/src/: main.cpp
examples/persistence/: CMakeLists.txt
examples/persistence/cpp_example/: main.cpp
examples/persistence/go_example/: .gitignore  go.mod  main.go
examples/persistence/nim_example/: main.nim
examples/persistence/nimlib/: FileBackend.nim  IPersistenceLib.nim  MemoryBackend.nim  PersistenceAPI.nim  PersistenceFacade.nim  PersistenceFactory.nim
examples/persistence/python_example/: main.py
examples/persistence/rust_example/: Cargo.toml  build.rs
examples/persistence/rust_example/src/: main.rs
examples/torpedo/: CMakeLists.txt  DESIGN.md  README.md
examples/torpedo/cpp_example/: README.md  main.cpp
examples/torpedo/go_example/: go.mod  main.go  main_cbor.go  main_native.go
examples/torpedo/nimlib/: README.md  torpedolib.nim
examples/torpedo/python_example/: README.md  main.py
examples/torpedo/rust_example/: Cargo.toml  build.rs
examples/torpedo/rust_example/src/: main.rs
scripts/: coverage-c.sh  coverage-common.sh  coverage-nim.sh
src/: api_codegen_c.nim  api_common.nim  api_event_broker.nim  api_library.nim  api_request_broker.nim  api_schema.nim  api_type.nim  api_type_resolver.nim  broker_context.nim  brokers.nim  event_broker.nim  mt_broker_common.nim  mt_event_broker.nim  mt_request_broker.nim  multi_request_broker.nim  request_broker.nim
test/: perf_test_multi_thread_event_broker.nim  perf_test_multi_thread_request_broker.nim  perf_test_multi_thread_signal_broker.nim  probe_createshared_uaf.nim  probe_mt_uaf.nim  probe_slab_workload.nim  probe_win_tls_uninit.nim  test_alloc_race_variants.nim  test_api_callAsync.nim  test_api_cbor_codec.nim  test_api_cbor_discovery.nim  test_api_cbor_event_subscribe.nim  test_api_cbor_library_init.nim  test_api_codec.nim  test_api_courier_growth.nim  test_api_discovery.nim  test_api_event_broker.nim  test_api_event_broker_minimal.nim  test_api_event_drop_under_overload.nim  test_api_event_teardown_isolation.nim  test_api_library_init.nim  test_api_request_broker.nim  test_api_signal_broker.nim  test_api_table_codec.nim  test_broker_ctor_shapes.nim  test_broker_interface_api.nim  test_broker_interface_mt.nim  test_broker_interface_signal.nim  test_broker_lifecycle.nim  test_broker_method_tunneling.nim  test_broker_oop.nim  test_event_broker.nim  test_handler_sugar.nim  test_mt_drop_async_eager.nim  test_mt_large_payload.nim  test_mt_provider_mock.nim  test_mt_queue.nim  test_multi_request_broker.nim  (+10 more)
test/cmake_consumer/: CMakeLists.txt  smoke.c  smoke.cpp
test/ffibench/: CMakeLists.txt  bench_driver.cpp  bench_e2e_driver.cpp  bench_event_driver.cpp  bench_ffi_submit.nim  bench_inproc.nim  benchlib.nim  nim.cfg  perf_driver.cpp  perf_inproc.nim  perf_overhead.nim  perf_phases.nim  stress_event_drop_overload.cpp  stress_event_mixed_audience.cpp  stress_event_no_foreign.cpp  stress_event_no_nim.cpp  stress_event_shutdown.cpp  stress_event_slow_callback.cpp  stress_mt.cpp  stress_shutdown.cpp
test/pytestlib/: CMakeLists.txt  nim.cfg  pytestlib.nim  test_pytestlib.cpp  test_pytestlib.py
test/typemappingtestlib/: CMakeLists.txt  nim.cfg  test_typemappingtestlib.cpp  test_typemappingtestlib.nim  test_typemappingtestlib.py  test_typemappingtestlib_cbor.nim  test_typemappingtestlib_cbor.py  typemappingtestlib.nim
test/typemappingtestlib/go_test/: cbor_only_cbor.go  cbor_only_native.go  extras.go  go.mod  main.go
test/typemappingtestlib/rust_test/: Cargo.toml  build.rs
test/typemappingtestlib/rust_test/src/: main.rs
test/typemappingtestlib_cbor/: CMakeLists.txt  nim.cfg  test_typemappingtestlib_cbor.cpp  test_typemappingtestlib_cbor.nim  test_typemappingtestlib_cbor.py  typemappingtestlib_cbor.nim
(+5201 files in other folders)
